# SimplyTransport

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  STYLESYSTEM.md  alembic.ini  app.py  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements-top-level.txt  requirements.txt
.github/: dependabot.yml  format_code.yaml
.github/workflows/: docker_tests_on_pr.yaml  format_code.yaml  issue_contributing.yaml  sonarcloud.yaml  sonarcloud.yml  tests_on_merge_main.yaml  tests_on_pr.yaml  type_check.yaml
Docker/app/: Dockerfile  docker-compose.yaml
Docker/otel-collector/: docker-compose.yaml
Docker/postgres/: docker-compose.yaml
Docker/redis/: docker-compose.yaml
Docker/timescale/: docker-compose.yaml
ENV_DIR/: pyvenv.cfg
ENV_DIR/Scripts/: activate  activate.bat
SimplyTransport/: app.py  cli.py
SimplyTransport/api_contract/: __init__.py  agency.py  base.py  calendar.py  calendar_date.py  delays.py  events.py  map_payloads.py  realtime_schedule.py  route.py  schedule.py  shape.py  statistics.py  stop.py  stop_time.py  trip.py
SimplyTransport/controllers/: __init__.py  agency.py  calendar.py  calendar_date.py  delays.py  events.py  maps.py  realtime.py  root.py  route.py  sample_api.py  (+6 more)
deployment_linux/: README.md  collector-config.yaml  deploy.sh  gtfs_tfi_checker.sh  nginx_config.txt  supervisor_config.txt  tfi_stop_features_checker.sh
gtfs_data/: README.md
migrations/: env.py
sql_scripts/: README.md  create_db.sql
tests/: conftest.py
(+276 files in other folders)
